tests/baselines/reference/reachabilityChecks1.errors.txt
reachabilityChecks1.ts(2,1): error TS7027: Unreachable code detected.
reachabilityChecks1.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(6,5): error TS7027: Unreachable code detected.
reachabilityChecks1.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(11,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(16,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(18,5): error TS7027: Unreachable code detected.
reachabilityChecks1.ts(18,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(23,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(28,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(30,5): error TS7027: Unreachable code detected.
reachabilityChecks1.ts(30,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(47,5): error TS7027: Unreachable code detected.
reachabilityChecks1.ts(51,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(53,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks1.ts(60,5): error TS7027: Unreachable code detected.
reachabilityChecks1.ts(69,5): error TS7027: Unreachable code detected.


==== reachabilityChecks1.ts (17 errors) ====
    while (true);
    var x = 1;
    ~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        while (true);
        let x;
        ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    module A1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        do {} while(true);
        module A {
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            interface F {}
        }
    }
    
    module A2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        while (true);
        module A {
        ~~~~~~~~~~
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            var x = 1;
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    module A3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        while (true);
        type T = string;
    }
    
    module A4 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        while (true);
        module A {
        ~~~~~~~~~~
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            const enum E { X }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    function f1(x) {
        if (x) {
            return;
        }
        else {
            throw new Error("123");
        }
        var x;
    }
    
    function f2() {
        return;
        class A {
        ~~~~~~~~~
        }
    ~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        for (; ;);
        module C {
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        }
    }
    
    function f3() {
        do {
        } while (true);
        enum E {
        ~~~~~~~~
            X = 1
    ~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    function f4() {
        if (true) {
            throw new Error();
        }
        const enum E {
        ~~~~~~~~~~~~~~
            X = 1
    ~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    